<resources>
    <string name="app_name">CuLibraryApp</string>
    <string name="welcome_to_cu_library">Welcome to CU Library</string>
    <string name="enter_your_uid_and_password">Enter your UID and Password.</string>
    <string name="password">Password</string>
    <string name="uid">UID</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_uid">Enter UID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attendance_in_percentage">Attendance in Percentage %</string>
    <string name="title_attendance">Attendance</string>


    <!--  common Error  -->
    <string name="something_went_wrong">Oh..Something went wrong.Please try again.</string>
    <string name="connectErr">Failed to connect to server. Please check your internet connection.</string>
    <string name="timeoutErr">Failed to connect to server. Please try after sometime.</string>
    <string name="timeoutErr_">Failed to connect to server. Sorry there was an error Please try again.</string>
    <string name="noInternetErr">Please check your internet connection and try again.</string>
    <string name="your_account_login">Your account has been logged into another device..</string>
    <string name="please_log_in_account">Please LogIn your Account first.</string>
    <string name="select_county_first">Please Select Your Country First</string>
    <string name="consultant_can_only">Consultant can only signup with the Canada country</string>
    <string name="reject_call">Reject Call</string>
    <string name="answer">Answer</string>


    <!--* snack bar-->
    <string name="error">Error</string>
    <string name="empty">Empty</string>
    <string name="invalid">Invalid</string>
    <string name="success">Success</string>
    <string name="loading">Loading…</string>
    <string name="search_jobs">Search Jobs…</string>
    <string name="jobs">Jobs</string>
    <string name="job_type">"Job Type- "</string>
    <string name="experience">"Experience- "</string>
    <string name="address_na">Address- NA</string>
    <string name="home_tab">Home</string>
    <string name="academics">Academics</string>
    <string name="personal">Personal</string>
    <string name="e_learning">E-Learning</string>
    <string name="reels_play">reels_play</string>

</resources>