<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.lorick.culibrary.viewModel.AuthViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.activity.login.LoginScreenActivity">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="0dp"
                android:layout_marginHorizontal="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:src="@drawable/logo_cu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/background_red_top_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingHorizontal="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView"
                    style="@style/manrope_bold_text_style"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:text="@string/welcome_to_cu_library"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView2"
                    style="@style/manrope_regular_text_style"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/enter_your_uid_and_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvUid"
                    style="@style/manrope_bold_text_style"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/uid"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

                <RelativeLayout
                    android:id="@+id/rlEmail"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/slight_round_corner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvUid">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etUid"
                        style="@style/manrope_edit_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:drawableStart="@drawable/ic_person_red"
                        android:drawablePadding="@dimen/_10sdp"
                        android:gravity="center_vertical"
                        android:text="@={viewModel.uid}"
                        android:inputType="textCapSentences"
                        android:hint="@string/enter_uid" />

                </RelativeLayout>


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvPassword"
                    style="@style/manrope_bold_text_style"
                    android:text="@string/password"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rlEmail" />

                <RelativeLayout
                    android:id="@+id/rlPassword"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/slight_round_corner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPassword">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPassword"
                        style="@style/manrope_edit_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:drawableStart="@drawable/ic_password_red"
                        android:drawablePadding="@dimen/_10sdp"
                        android:gravity="center_vertical"
                        android:inputType="text"
                        android:text="@={viewModel.password}"
                        android:hint="@string/enter_password" />

                </RelativeLayout>

                <CheckBox
                    android:id="@+id/checkRememberMe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="0dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/white"
                    android:drawableTint="@color/white"
                    app:buttonCompat="@drawable/custom_check_box_remember_selector"
                    app:layout_constraintEnd_toStartOf="@+id/tvForgotPassword"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rlPassword" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvForgotPassword"
                    style="@style/manrope_bold_text_style"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/checkRememberMe"
                    app:layout_constraintEnd_toEndOf="@+id/rlEmail"
                    app:layout_constraintTop_toTopOf="@+id/checkRememberMe" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogIn"
                    style="@style/button_style"
                    android:layout_marginHorizontal="@dimen/_50sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:text="@string/login"
                    android:textColor="@color/red"
                    android:layout_marginTop="@dimen/_30sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkRememberMe"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>